# StarryOS

./: .rust-toolchain.toml  Cargo.toml  README.en.md  README.md
.cargo/: config.toml
api/src/syscall/: mod.rs
api/src/tee/: fs_dirfile.rs  fs_htree.rs  mod.rs  otp_stubs.rs  tee_get_sealing_key.rs  tee_ree_fs.rs  tee_svc_cryp.rs  tee_svc_cryp2.rs  tee_svc_storage.rs  vm.rs
api/src/tee/crypto/: crypto.rs
src/: lib.rs  tee_api_arith_mpi.rs  tee_api_defines.rs  tee_api_mm.rs  tee_api_panic.rs  tee_api_types.rs  trace.rs  utee_types.rs
src/api/: cancel.rs  mod.rs  tee_api_cancel.rs  tee_api_generic.rs  tee_api_mm.rs  tee_api_objects.rs  tee_api_panic.rs  tee_api_property.rs  tee_api_time.rs  tee_internal_client.rs  user_ta_headers.rs
src/syscalls/: macros.rs  mod.rs  raw_syscall.rs  syscall_table.rs
tests/: test_tee_api_arith_mpi.rs
