[package]
name = "rust-libutee"
version = "0.1.0"
edition = "2024"

[features]
strict_annotation_checks = []
trace-error= []
trace-flow = []
trace-info = []
trace-debug = []

[dependencies]
# mbedtls = { path = "./rust-mbedtls/mbedtls", default-features = false, features = ["std"] }
# mbedtls-sys-auto = { path = "./rust-mbedtls/mbedtls-sys", package = "mbedtls-sys-auto", default-features = false}

mbedtls = { git = "https://gitee.com/openkylin/rust-mbedtls.git", default-features = false, features = ["std"] }
mbedtls-sys-auto = { git = "https://gitee.com/openkylin/rust-mbedtls.git", package = "mbedtls-sys-auto", default-features = false }
libc = "0.2"


[lib]
crate-type = ["cdylib", "rlib"]  # 同时生成动态库和静态库
name = "rust_utee"