[workspace]
resolver = "2"
members = ["api", "core"]
exclude = ["arceos"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

authors = [
    "Azure-stars <Azure_stars@126.com>",
    "Yuekai Jia <equation618@gmail.com>",
    "KylinSoft Co., Ltd. <https://www.kylinos.cn/>",
    "朝倉水希 <asakuramizu111@gmail.com>",
    "Mivik <mivikq@gmail.com>",
]
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/starry-next"

[workspace.dependencies]
axfeat = { path = "arceos/api/axfeat", features = [
    "alloc-slab",
    "fp-simd",
    "fs-ext4",
    "irq",
    "multitask",
    "net",
    "page-alloc-4g",
    "rtc",
    "sched-rr",
    "task-ext",
    "uspace",
] }

axalloc = { path = "arceos/modules/axalloc" }
axconfig = { path = "arceos/modules/axconfig" }
axdisplay = { path = "arceos/modules/axdisplay" }
axdriver = { path = "arceos/modules/axdriver" }
axfs = { path = "arceos/modules/axfs" }
axhal = { path = "arceos/modules/axhal" }
axinput = { path = "arceos/modules/axinput" }
axlog = { path = "arceos/modules/axlog" }
axmm = { path = "arceos/modules/axmm" }
axnet = { path = "arceos/modules/axnet" }
axplat-aarch64-crosvm-virt = { path = "local_crates/axplat-aarch64-crosvm-virt" }
axruntime = { path = "arceos/modules/axruntime" }
axsync = { path = "arceos/modules/axsync" }
axtask = { path = "arceos/modules/axtask" }

axbacktrace = "0.1"
axerrno = "0.2"
axfs-ng-vfs = "0.1"
axio = { version = "0.2", git = "https://github.com/arceos-org/axio.git", tag = "dev-v02" }
axpoll = "0.1"
bitflags = "2.10"
bytemuck = { version = "1.23", features = ["unsound_ptr_pod_impl"] }
cfg-if = "1.0"
event-listener = { version = "5.4.0", default-features = false }
extern-trait = "0.2"
hashbrown = "0.16"
kspin = "0.1"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linkme = "0.3.33"
linux-raw-sys = { version = "0.11", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "prctl",
    "system",
] }
memory_addr = "0.4"
scope-local = "0.1"
slab = { version = "0.4.9", default-features = false }
spin = "0.10"
starry-process = "0.2"
starry-signal = { version = "0.2", git = "https://github.com/Starry-OS/starry-signal.git", tag = "dev-v02" }
starry-vm = "0.2"

starry-core = { path = "./core" }
starry-api = { path = "./api" }
mbedtls = { version = "0.13.4", package = "mbedtls-smx", default-features = false, features = [
    "no_std_deps",
] }
mbedtls-sys-auto = { version = "2.28.13", package = "mbedtls-sys-auto-smx", default-features = false, features = [
] }

[package]
name = "starry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
tee = ["starry-api/tee"]
tee_test = ["starry-api/tee_test", "starry-api/tee_test_mock_user_access"]
qemu = [
    "axfeat/display",
    "axfeat/input",
    "starry-api/input",

    "axfeat/vsock",
    "starry-api/vsock",

    "axfeat/defplat",
    "axfeat/bus-pci",

    # auxilary features
    "axfeat/fs-times",
    "starry-api/dev-log",

    # default open tee
    "tee",
]

qemu_unit_test = [
    "qemu",
    "tee_test",
]
smp = ["axfeat/smp", "axplat-riscv64-visionfive2?/smp"]

vf2 = ["dep:axplat-riscv64-visionfive2", "axfeat/driver-sdmmc"]
dice = ["crosvm", "starry-api/dice"]

crosvm = [
    "axfeat/display",
    "axfeat/input",
    "starry-api/input",

    "axfeat/vsock",
    "starry-api/vsock",

    "axfeat/crosvm",
    "dep:axplat-aarch64-crosvm-virt",
    "pci",

    "smp",

    # auxilary features
    "axfeat/fs-times",
    "starry-api/dev-log",
]

# Stubs
pci = ["axfeat/bus-pci"]
mmio = ["axfeat/bus-mmio"]

[dependencies]
axdriver.workspace = true
axerrno.workspace = true
axfeat.workspace = true
axfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axruntime.workspace = true
axsync.workspace = true
axtask.workspace = true
cfg-if.workspace = true
linkme.workspace = true
linux-raw-sys.workspace = true
starry-process.workspace = true
starry-signal.workspace = true

starry-core.workspace = true
starry-api.workspace = true

[dependencies.axplat-riscv64-visionfive2]
version = "0.3"
git = "https://github.com/Starry-OS/axplat-riscv64-visionfive2.git"
tag = "dev-v03"
features = ["fp-simd", "irq", "rtc"]
optional = true

[dependencies.axplat-aarch64-crosvm-virt]
workspace = true
optional = true
features = ["irq", "fp-simd", "smp", "rtc"]

[patch.crates-io]
axplat = { git = "https://github.com/kylin-x-kernel/axplat_crates.git", branch = "dev" }
axplat-x86-pc = { git = "https://github.com/kylin-x-kernel/axplat_crates.git", branch = "dev" }
axplat-aarch64-qemu-virt = { git = "https://github.com/kylin-x-kernel/axplat_crates.git", branch = "dev" }
axplat-riscv64-qemu-virt = { git = "https://github.com/kylin-x-kernel/axplat_crates.git", branch = "dev" }
axplat-loongarch64-qemu-virt = { git = "https://github.com/kylin-x-kernel/axplat_crates.git", branch = "dev" }
axplat-aarch64-peripherals = { git = "https://github.com/kylin-x-kernel/axplat_crates.git", branch = "dev" }

fdtree_rs = { path = "local_crates/fdtree-rs" }
arm-gic = { git = "https://github.com/kylin-x-kernel/arm-gic.git", branch = "main" }
tee_raw_sys = { path = "local_crates/tee_raw_sys" }
mbedtls-smx = { git = "https://gitee.com/openkylin/rust-mbedtls.git", branch = "smx-mbedtls-sys-auto_v2.28.12" }
mbedtls-sys-auto-smx = { git = "https://gitee.com/openkylin/rust-mbedtls.git", branch = "smx-mbedtls-sys-auto_v2.28.12" }

[package.metadata.vendor-filter]
platforms = ["riscv64gc-unknown-none-elf", "loongarch64-unknown-none-softfloat"]
all-features = true
